--- a/Shared/main.css
+++ b/Shared/main.css
@@ -292,7 +292,7 @@ a {
     border: none;
     border-radius: 100000px;
 
-    text-decoration: none;box-shadow: 0px 0px 1px 7.5px rgba(0, 89, 255, 0.2);
+    text-decoration: none;
     text-align: center;
     font-size: 0.85rem;
 
